data/derived/comb/progs/unify/prog4189.ml.out
Characters 161-162:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a * 'b list -> int * 'c -> int list
       but an expression was expected of type
         'a * 'b list -> int * 'c -> 'a * 'b list
       Type int list is not compatible with type 'a * 'b list 
